--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<p>用GITHUB快速展示网站</p>
+<p>用GITHUB快速展示网站;修改主页的index，以确定github.io默认读取的index.html位置</p>
 </body>
 </html>
