--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>导航</title>
 </head>
 <body>
-<p>用GITHUB快速展示网站;修改主页的index，以确定github.io默认读取的index.html位置</p>
+<ul>
+    <li><a href="20190825baidufuzayemian.html">2019825</a><li>    
+<ul>
 </body>
 </html>
