--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <ul>
-    <li><a href="20190825baidufuzayemian.html">2019825</a><li>    
+    <li><a href="20190825baiduqianduan.html">2019825</a><li>    
 <ul>
 </body>
 </html>
