--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <ul>
-    <li><a href="20190825baiduqianduan.html">百度前端复杂页面练习</a><li>    
+    <li><a href="复杂页面.html">百度前端复杂页面练习</a><li>
 <ul>
 </body>
 </html>
