--- a/p1.html
+++ b/p1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>百度前端复杂页面</title>
+    <title>复杂页面练习</title>
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
