复杂页面初成

--- a/p1.html
+++ b/p1.html
@@ -58,7 +58,14 @@
                 <input type="text" placeholder="Search">
                 <img src="images/5.png" alt="">
             </div>
-            <div class="detail"></div>
+            <div class="detail">
+                <span class="d-name">名字</span>
+                <div class="d-button">
+                    <button type="button"><img src="images/de.svg" alt=""></button>
+                    <button type="button"><img src="images/de.svg" alt=""></button>
+                    <button type="button"><img src="images/de.svg" alt=""></button>
+                </div>
+            </div>
         </div>
         <div class="contact">
             <div class="each-contact">
@@ -110,7 +117,26 @@
                 <p>hellohellohellohellohellohellofadsfdsafadsfdas</p>
             </div>
         </div>
-        <div class="message"></div>
+        <div class="message">
+            <div class="m-box">
+                <div class="test">
+                    <img src="images/h.png" alt="">
+                </div>
+                <div class="m-dialog">
+                    <span>first name last name</span>
+                    <p>ajfkajfkadjfkadsjfkadsjfklajfkasdjfkdsjfzksldfjdsajkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkfds</p>
+                </div>
+            </div>
+            <div class="m-box">
+                <div class="test">
+                    <img src="images/h.png" alt="">
+                </div>
+                <div class="m-dialog">
+                    <span>first name last name</span>
+                    <p>ajfkajfkadjfkadsjfkadsjfklajfkasdjfkdsjfzksldfjdsajkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkkadsjfkadsjfklajfkasdjfkfds</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
