--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <ul>
-    <li><a href="p1.html">百度前端复杂页面练习</a><li>
+    <li><a href="p1.html">百度前端复杂页面练习</a></li>
     <li><a href="p2.html">我是精明的小卖家</a></li>
     <li><a href="p5.html">乘法表</a></li>
+    <li><a href="p6.html">下拉菜单</a></li>
 <ul>
 </body>
 </html>
