--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="p2.html">我是精明的小卖家</a></li>
     <li><a href="p5.html">乘法表</a></li>
     <li><a href="p6.html">下拉菜单</a></li>
+    <li><a href="p7.html">商品按照价格排序</a></li>
 <ul>
 </body>
 </html>
