--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>导航</title>
+    <style>
+       *{
+           margin:0;
+           padding:0;
+           text-decoration:none;
+       }
+        ul{
+            width:80%;
+            margin:80px auto;
+            background-color:rgb(248,248,248);
+        }
+        ul li{
+            line-height:30px;
+            border-bottom:1px solid  grey;
+        }
+    </style>
 </head>
 <body>
 <ul>
@@ -11,6 +27,7 @@
     <li><a href="p5.html">乘法表</a></li>
     <li><a href="p6.html">下拉菜单</a></li>
     <li><a href="p7.html">商品按照价格排序</a></li>
-<ul>
+    <li><a href="p8.html">定时器</a></li>
+</ul>
 </body>
 </html>
